fix: update box shadow for vehicle card to improve visibility in light and dark modes

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -37,7 +37,7 @@
   }
 
   .vehicle-card {
-    box-shadow: 0px 0px 10px #222222;
+    box-shadow: 0px 0px 2px #ccc;
     padding: 10px;
     border-radius: 10px;
     transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
@@ -45,7 +45,7 @@
   }
   
   .dark-mode .vehicle-card {
-    box-shadow: 0px 3px 12px #cccccc90;
+    box-shadow: 0px 0px 4px #cccccc90;
   }
 
   .vehicle-card:last-child {
